force-app/main/default/objects/QuoteLineItem/fields/DiscountRate__c.field-meta.xml
<CustomField>
    <fullName>DiscountRate__c</fullName>
    <formula>DiscountAmount__c / UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>値引率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>