force-app/main/default/objects/QuoteLineItem/fields/NewFlag__c.field-meta.xml
<CustomField>
    <fullName>NewFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>新規フラグ</label>
    <type>Checkbox</type>
</CustomField>