force-app/main/default/objects/QuoteLineItem/fields/PeriodMonths__c.field-meta.xml
<CustomField>
    <fullName>PeriodMonths__c</fullName>
    <description>ページレイアウト側で必須にしています
項目側で必須にすると、商談 &lt; -- &gt; 見積間の商品コピーに不具合がでるので項目側では必須にしないようにしてください
https://app.clickup.com/t/3703355/IID-8282</description>
    <label>月数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>