force-app/main/default/objects/QuoteLineItem/fields/ProductsNameModifying__c.field-meta.xml
<CustomField>
    <fullName>ProductsNameModifying__c</fullName>
    <label>見積商品名(修正表示)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>