force-app/main/default/objects/QuoteLineItem/fields/QuoteApprovalPattern__c.field-meta.xml
<CustomField>
    <fullName>QuoteApprovalPattern__c</fullName>
    <description>見積側の承認パターン判定に積み上げ集計（最大）を使用しているため、見積品目＞承認ルート判定値の値を数値に変換する用の項目</description>
    <label>見積承認パターン</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>