force-app/main/default/objects/QuoteLineItem/fields/SellingPriceDistount__c.field-meta.xml
<CustomField>
    <fullName>SellingPriceDistount__c</fullName>
    <label>販売価格（値引き後）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>