force-app/main/default/objects/QuoteLineItem/fields/SellingPriceDistountFormula__c.field-meta.xml
<CustomField>
    <fullName>SellingPriceDistountFormula__c</fullName>
    <formula>UnitPrice - DiscountAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>販売価格（値引き後）_数式</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>