force-app/main/default/objects/QuoteLineItem/fields/TotalAmountDistountFormula__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountDistountFormula__c</fullName>
    <formula>SellingPriceDistountFormula__c * Quantity * PeriodMonths__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>合計金額（値引き後）_数式</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>