force-app/main/default/objects/QuoteLineItem/fields/TotalAmountListPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountListPrice__c</fullName>
    <label>合計金額（定価）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>