force-app/main/default/objects/QuoteLineItem/validationRules/DiscountAmount_Limit_UnitPrice.validationRule-meta.xml
<ValidationRule>
    <fullName>DiscountAmount_Limit_UnitPrice</fullName>
    <active>true</active>
    <description>販売価格を超えた値引きはできない</description>
    <errorConditionFormula>DiscountAmount__c  &gt; UnitPrice</errorConditionFormula>
    <errorDisplayField>DiscountAmount__c</errorDisplayField>
    <errorMessage>販売価格を上回る値引額は設定できません</errorMessage>
</ValidationRule>