force-app/main/default/objects/QuoteLineItem/validationRules/Quantity_Except_IntegralValue.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Except_IntegralValue</fullName>
    <active>true</active>
    <errorConditionFormula>mod(Quantity, 1) &lt;&gt; 0</errorConditionFormula>
    <errorDisplayField>Quantity</errorDisplayField>
    <errorMessage>整数をいれてください</errorMessage>
</ValidationRule>